<resources>
    <string name="splash_title">IBD Patient Assessment and Empowerment\nProgram</string>
    <string name="app_name">IPAEPS</string>
    <string name="app_name_cap">IPAEPS</string>
    <string name="app_name_first_cap">Ipaeps</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_title_buttom">IBD patient empowerment application developed by\nSimon Knowles</string>
    <string name="start">&#160;&#160;&#160;&#160;&#160;Start ipaeps</string>
    <string name="log">&#160;&#160;&#160;&#160;&#160;Patient log</string>
    <string name="setting">&#160;&#160;&#160;&#160;&#160;Setting </string>
    <string name="print">&#160;&#160;&#160;&#160;&#160;Print patient data</string>
    <string name="patient_report">&#160;&#160;&#160;&#160;&#160;Patient Report</string>
    <string name="patient_report_2">Patient Report</string>
    <string name="print_2">&#160;Print</string>
    <string name="export">&#160;&#160;&#160;&#160;&#160;Export patient information</string>
    <string name="export_2">&#160;Export</string>
    <string name="export_3">Export</string>
    <string name="delete">&#160;&#160;&#160;&#160;&#160;Delete patient log</string>
    <string name="next">&#160;&#160;&#160;&#160;&#160;Next</string>
    <string name="previous">Previous&#160;&#160;&#160;&#160;&#160;</string>
    <string name="patient_id">Patient ID</string>
    <string-array name="gastroenterologist">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>49+</item>
    </string-array>
    <string name="enter_patient_id">&#160;&#160;&#160;Enter Patient ID</string>
    <string name="site">Site: </string>
    <string name="q_module_1_1">Patient ID</string>
    <string name="q_module_1_2">Gastroenterologist ID</string>
    <string name="q_module_1_3">Site: </string>
    <string-array name="array_site">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string name="demographic_details">Demographic details</string>
    <string name="q_module_2_1">Age?</string>
    <string name="q_module_2_2">Gender?</string>
    <string name="q_module_2_3">Marital status?</string>
    <string name="q_module_2_4">What is your highest level of education completed?</string>
    <string name="q_module_2_5">Is English your primary language?</string>
    <string name="q_module_2_6">How many months ago did you last see your gastroenterologist?</string>
    <string-array name="age">
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Gender non&#8211;specific</item>
    </string-array>
    <string-array name="marrid_status">
        <item>Single</item>
        <item>Married/de facto</item>
        <item>Separated/divorced</item>
        <item>Widowed</item>
    </string-array>
    <string-array name="education">
        <item>Primary school</item>
        <item>Secondary school</item>
        <item>Certificate</item>
        <item>Diploma</item>
        <item>Undergraduate degree</item>
        <item>Postgraduate degree</item>
    </string-array>
    <string-array name="yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="ibd_activity">IBD activity</string>
    <string name="q_module_3_1">Condition:</string>
    <string name="q_module_3_2">Number of years diagnosed with IBD?</string>
    <string name="q_module_3_3">In the past 3 months my IBD has been:</string>
    <string name="q_module_3_4">Over the past week, how many bowel movements have you had per day?</string>
    <string name="q_module_3_5">Over the past week, how many of your bowel movements have been loose/watery stools per day?</string>
    <string name="q_module_3_6">General well-being over the last week</string>
    <string name="q_module_3_7">Over the past week, my rectal bleeding has been:</string>
    <string name="q_module_3_8">Over the past week have you taken any antidiarrheal medication?</string>
    <string name="q_module_3_9">Have you experienced a fever over the past week?</string>
    <string name="q_module_3_10">Have you experienced an abdominal mass/tenderness over  the last week?</string>
    <string name="q_module_3_11">Have you experienced abdominal pain or cramping over  the last week?</string>
    <string name="q_module_3_12">Please tick any complications you are currently experiencing. (Please select as many as relevant) </string>
    <string name="q_module_3_13">Do you have a stoma?</string>
    <string name="q_module_3_14">If yes, how many months have you had a stoma?</string>
    <string name="q_module_3_15">If yes, what type of stoma do you have?</string>
    <string name="q_module_3_16">Have you been diagnosed with any of the following conditions along with IBD? (Please select as many as relevant) </string>
    <string name="q_module_3_17">Compared to your last visit to the gastroenterologist, how would you describe the status of your IBD SYMPTOMS now? </string>
    <string name="q_module_3_18">Compared to your last visit to the gastroenterologist, how would you describe the status of your PAIN now? </string>
    <string name="q_module_3_19">Compared to your last visit to the gastroenterologist, how would you describe any changes to the FREQUENCY OF BOWEL MOVEMENTS now?</string>
    <string name="colostomy">Colostomy</string>
    <string name="ileostomy">Ileostomy</string>
    <string name="urostomy">Urostomy  </string>
    <string name="very_well">Very well</string>
    <string name="slightly_below_par">Slightly below par</string>
    <string name="poor">Poor</string>
    <string name="very_poor">Very poor</string>
    <string name="none">None</string>
    <string name="mild">Mild</string>
    <string name="moderate">Moderate</string>
    <string name="severe">Severe</string>
    <string name="nocturnal_diarrhea">Nocturnal diarrhea</string>
    <string name="faecal_incontinence">Faecal incontinence</string>
    <string name="faecal_urgency">Faecal urgency</string>
    <string name="nausea_vomiting">Nausea and /or vomiting</string>
    <string name="joint_swelling">Joint pain and swelling (e.g., Arthralgia/arthritis)</string>
    <string name="irritations">Irritations and inflammation of the eye (e.g., Iritis/uveitis)</string>
    <string name="inflammation">Inflammation of the skin (e.g., Erythema nodosum, Pyoderma gangrenosum)</string>
    <string name="mouth">Mouth lesions (e.g., Aphthous stomatitis)</string>
    <string name="anal_fissure">Anal fissure, fistula or abscess</string>
    <string name="other_fistula">Other fistula </string>
    <string name="thnaks_you_for">Thank you for your responses and feedback</string>
    <string name="please_return_tablet">Please return this tablet to reception</string>
    <string name="touch_here_to">Touch here to go back to start screen</string>
    <string name="default_module">Default pre&#8211;set programs</string>
    <string name="what_pre_set">What pre&#8211;set programs would you like to run?</string>
    <string name="Run_all_modules">Run all modules</string>
    <string name="s_r_1">Patient ID, Disease activity, Medications, and Pain symptoms</string>
    <string name="s_r_2">Patient ID, Disease activity, Medications, Pain symptoms, and Mental health status (with feedback) CHOOSE THIS OPTION IF YOU WISH TO USE A BRIEF REPORT</string>
    <string name="s_r_3">Patient ID, Disease activity, Medications, Medication adherence, Pain symptoms, Mental health status (with feedback), and Patient questions/concerns</string>
    <string name="s_r_4">Demographic details, Disease activity, Medications, Medication adherence, Pain symptoms, Mental health status (with feedback), and Patient questions/concerns</string>
    <string name="s_r_5">Patient ID, Disease activity, Medications, Medication adherence, Pain symptoms, Mental health status (with feedback), Diet, Patience confidence, Patient questions/concerns, Responses to past goals, Setting goals to better manage my IBD, and Setting problems/barriers I\'m currently facing in relation to managing my IBD</string>
    <string name="s_r_6">All modules except program evaluation (patient feedback) and Mental health status (patient feedback)</string>
    <string name="s_r_7">Demographic details, Mental health status (with feedback), and Mental health status (patient feedback)</string>
</resources>